intel/bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/log.txt
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:75:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:83:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:84:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:90:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:91:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:97:31: error: assigning to 'int *' from incompatible type 'void *'
            t->input_filter = ngx_http_tfs_process_ds_input_filter;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:98:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:104:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:105:32: error: use of undeclared identifier 'NULL'
            t->retry_handler = NULL;
                               ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:112:20: error: use of undeclared identifier 'NULL'
            return NULL;
                   ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:120:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:126:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:127:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:133:31: error: assigning to 'int *' from incompatible type 'void *'
            t->input_filter = ngx_http_tfs_process_ds_input_filter;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:134:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:138:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:142:20: error: use of undeclared identifier 'NULL'
            return NULL;
                   ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:150:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
bench_214_new/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:159:31: error: use of undeclared identifier 'NULL'
            t->input_filter = NULL;
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
